--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,4 @@
+ACLOCAL_AMFLAGS = -I config
 SUBDIRS = libibnetdisc
 
 INCLUDES = -I$(top_builddir)/include/ -I$(srcdir)/include -I$(includedir) \
@@ -13,7 +14,7 @@ sbin_PROGRAMS = src/ibaddr src/ibnetdiscover src/ibping src/ibportstate \
 	        src/ibroute src/ibstat src/ibsysstat src/ibtracert \
 	        src/perfquery src/sminfo src/smpdump src/smpquery \
 	        src/saquery src/vendstat src/iblinkinfo \
-		src/ibqueryerrors
+		src/ibqueryerrors src/ibcacheedit
 
 if ENABLE_TEST_UTILS
 sbin_PROGRAMS += src/ibsendtrap src/mcm_rereg_test
@@ -62,6 +63,8 @@ src_iblinkinfo_SOURCES = src/iblinkinfo.c
 src_iblinkinfo_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 src_ibqueryerrors_SOURCES = src/ibqueryerrors.c
 src_ibqueryerrors_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
+src_ibcacheedit_SOURCES = src/ibcacheedit.c
+src_ibcacheedit_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 
 man_MANS = man/ibaddr.8 man/ibcheckerrors.8 man/ibcheckerrs.8 \
 	man/ibchecknet.8 man/ibchecknode.8 man/ibcheckport.8 \
@@ -76,14 +79,14 @@ man_MANS = man/ibaddr.8 man/ibcheckerrors.8 man/ibcheckerrs.8 \
 	man/ibprintswitch.8 man/ibprintca.8 man/ibfindnodesusing.8 \
 	man/ibdatacounts.8 man/ibdatacounters.8 \
 	man/ibrouters.8 man/ibprintrt.8 man/ibidsverify.8 \
-	man/check_lft_balance.8
+	man/check_lft_balance.8 man/ibcacheedit.8
 
 BUILT_SOURCES = ibdiag_version
 ibdiag_version:
-	if [ -x $(top_srcdir)/../gen_ver.sh ] ; then \
+	if [ -x $(top_srcdir)/gen_ver.sh ] ; then \
 		ver_file=$(top_builddir)/include/ibdiag_version.h ; \
 		ibdiag_ver=`cat $$ver_file | sed -ne '/#define IBDIAG_VERSION /s/^.*\"\(.*\)\"$$/\1/p'` ; \
-		ver=`$(top_srcdir)/../gen_ver.sh $(PACKAGE)` ; \
+		ver=`$(top_srcdir)/gen_ver.sh $(PACKAGE)` ; \
 		if [ $$ver != $$ibdiag_ver ] ; then \
 			cat $$ver_file | sed -e '/#define IBDIAG_VERSION /s/\".*\"/\"'$$ver'\"/' > tmp_new_version ; \
 			cat tmp_new_version > $$ver_file && rm -f tmp_new_version ; \
@@ -94,8 +97,8 @@ EXTRA_DIST = scripts include infiniband-diags.spec.in infiniband-diags.spec \
 	$(man_MANS) autogen.sh
 
 dist-hook:
-	if [ -x $(top_srcdir)/../gen_chlog.sh ] ; then \
-		$(top_srcdir)/../gen_chlog.sh $(PACKAGE) > $(distdir)/ChangeLog ; \
+	if [ -x $(top_srcdir)/gen_chlog.sh ] ; then \
+		$(top_srcdir)/gen_chlog.sh > $(distdir)/ChangeLog ; \
 	fi
 
 # install this to a default location.
