--- a/src/configure.in
+++ b/src/configure.in
@@ -1,8 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(infiniband-diags, 1.5.5, linux-rdma@vger.kernel.org)
+AC_INIT(infiniband-diags, 1.5.8, linux-rdma@vger.kernel.org)
 AC_CONFIG_AUX_DIR(config)
+AC_CONFIG_MACRO_DIR(config)
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
 
