--- a/src/config.h.in
+++ b/src/config.h.in
@@ -66,11 +66,17 @@
 /* Define to 1 if you have the <sys/types.h> header file. */
 #undef HAVE_SYS_TYPES_H
 
+/* Define to 1 if struct umad_port has link_layer member */
+#undef HAVE_UMAD_PORT_LINK_LAYER
+
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
 /* Define to 1 if you have the `vprintf' function. */
 #undef HAVE_VPRINTF
+
+/* Define the path to configuratios */
+#undef IBDIAG_CONFIG_PATH
 
 /* Define to the sub-directory in which libtool stores uninstalled libraries.
    */
@@ -90,9 +96,6 @@
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
-
-/* Define to the home page for this package. */
-#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
