--- a/src/configure.in
+++ b/src/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(infiniband-diags, 1.5.8, linux-rdma@vger.kernel.org)
+AC_INIT(infiniband-diags, 1.5.12, linux-rdma@vger.kernel.org)
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_MACRO_DIR(config)
 AM_CONFIG_HEADER(config.h)
@@ -9,12 +9,6 @@ AM_INIT_AUTOMAKE
 
 AC_SUBST(RELEASE, ${RELEASE:-unknown})
 AC_SUBST(TARBALL, ${TARBALL:-${PACKAGE}-${VERSION}.tar.gz})
-
-AC_ARG_ENABLE(libcheck, [  --disable-libcheck      do not test for presence of ib libraries],
-[       if test x$enableval = xno ; then
-                disable_libcheck=yes
-        fi
-])
 
 dnl support debug mode
 AC_ARG_ENABLE(debug,
@@ -30,31 +24,33 @@ dnl Checks for programs
 AC_PROG_CC
 AC_PROG_LIBTOOL
 
-if test "$disable_libcheck" != "yes"
-then
 dnl Checks for libraries
 AC_CHECK_LIB(ibumad, umad_init, [],
 	AC_MSG_ERROR([umad_init() not found. diags require libibumad.]))
-AC_CHECK_LIB(ibmad, mad_dump_int, [],
-	AC_MSG_ERROR([mad_dump_int() not found. diags require libibmad.]))
+AC_CHECK_LIB(ibmad, mad_dump_mlnx_ext_port_info, [],
+	AC_MSG_ERROR([mad_dump_mlnx_ext_port_info() not found.
+	diags require libibmad with mad_dump_mlnx_ext_port_info support.]))
 AC_CHECK_LIB(ibmad, pma_query_via, [],
 	AC_MSG_ERROR([pma_query_via() not found. diags require more recent libibmad.]))
-AC_CHECK_LIB(osmcomp, cl_thread_init, [],
-	AC_MSG_ERROR([cl_thread_init() not found. diags require libosmcomp.]))
+AC_CHECK_MEMBER([struct umad_port.link_layer],
+			[ac_have_umad_port_link_layer=yes],
+			[ac_have_umad_port_link_layer=no],
+			[#include <infiniband/umad.h>])
+if test "$ac_have_umad_port_link_layer" = "yes"; then
+   AC_DEFINE([HAVE_UMAD_PORT_LINK_LAYER], 1, [Define to 1 if struct umad_port has link_layer member])
 fi
+AC_CHECK_LIB(osmcomp, cl_qmap_insert, [],
+	AC_MSG_ERROR([cl_qmap_insert() not found. diags require libosmcomp.]))
 
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h fcntl.h inttypes.h netinet/in.h sys/ioctl.h])
-if test "$disable_libcheck" != "yes"
-then
 AC_CHECK_HEADER(infiniband/umad.h, [],
 	AC_MSG_ERROR([<infiniband/umad.h> not found. diags require libibumad.])
 )
 AC_CHECK_HEADER(infiniband/mad.h, [],
 	AC_MSG_ERROR([<infiniband/mad.h> not found. diags require libibmad.])
 )
-fi
 
 dnl Checks for library functions
 AC_FUNC_ERROR_AT_LINE
@@ -63,6 +59,13 @@ AC_CHECK_FUNCS([strchr strrchr strtol strtoul memset strtoull])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
+
+dnl Define a configure directory
+IBDIAG_CONFIG_PATH_TMP1="`eval echo ${sysconfdir}`"
+IBDIAG_CONFIG_PATH_TMP2="`echo $IBDIAG_CONFIG_PATH_TMP1 | sed 's/^NONE/$ac_default_prefix/'`"
+IBDIAG_CONFIG_PATH="`eval echo $IBDIAG_CONFIG_PATH_TMP2`/infiniband-diags"
+AC_SUBST(IBDIAG_CONFIG_PATH)
+AC_DEFINE_UNQUOTED([IBDIAG_CONFIG_PATH], "$IBDIAG_CONFIG_PATH", [Define the path to configuratios])
 
 dnl Check if we should include test utilities
 AC_MSG_CHECKING(for --enable-test-utils)
@@ -117,7 +120,7 @@ AC_SUBST(PERL_INSTALLDIR)
 
 if test $withperlinstalldir = "no"
 then
-    PERL_INSTALLDIR=`$PERL -e 'use Config; $T=$Config{installsitearch}; print $T;'`
+    PERL_INSTALLDIR=`$PERL -e 'use Config; $T=$Config{installvendorlib}; print $T;'`
 fi
 AC_SUBST(PERL_INSTALLDIR)
 
@@ -130,11 +133,17 @@ AC_CACHE_CHECK(whether ld accepts --version-script, ac_cv_version_script,
 
 AM_CONDITIONAL(HAVE_LD_VERSION_SCRIPT, test "$ac_cv_version_script" = "yes")
 
+dnl Define override for IBPATH
+AC_ARG_WITH(ibpath_override,
+[  --with-ibpath_override=<path> define ib binaries path],
+AC_MSG_NOTICE(Using IBPATH : $with_ibpath_override),
+with_ibpath_override=)
+
 dnl Make appropriate substitution for IB script path
 dnl Must expand nested unquoting
 IBSCRIPTPATH_TMP1="`eval echo ${sbindir}`"
 IBSCRIPTPATH_TMP2="`echo $IBSCRIPTPATH_TMP1 | sed 's/^NONE/$ac_default_prefix/'`"
-IBSCRIPTPATH="`eval echo $IBSCRIPTPATH_TMP2`"
+IBSCRIPTPATH="${with_ibpath_override:-`eval echo $IBSCRIPTPATH_TMP2`}"
 AC_SUBST(IBSCRIPTPATH)
 
 dnl Begin libibnetdisc stuff
@@ -169,6 +178,7 @@ AC_CONFIG_FILES([\
 	scripts/ibrouters \
 	scripts/iblinkinfo.pl \
 	scripts/ibqueryerrors.pl \
-   libibnetdisc/Makefile
+	man/ibqueryerrors.8 \
+	libibnetdisc/Makefile \
 ])
 AC_OUTPUT
