els-ASAP auto commit file/tag infiniband-diags-2.0.0-1.el7.src.rpm

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,9 @@
 ACLOCAL_AMFLAGS = -I config
-SUBDIRS = libibnetdisc
+SUBDIRS = libibmad libibnetdisc
 
-INCLUDES = -I$(top_builddir)/include/ -I$(srcdir)/include -I$(includedir) \
-	-I$(includedir)/infiniband -I$(top_srcdir)/libibnetdisc/include
+AM_CPPFLAGS = -I$(top_builddir)/include/ -I$(srcdir)/include -I$(includedir) \
+	-I$(includedir)/infiniband -I$(top_srcdir)/libibnetdisc/include \
+	-I$(top_srcdir)/libibmad/include
 
 if DEBUG
 DBGFLAGS = -ggdb -D_DEBUG_
@@ -16,10 +17,6 @@ sbin_PROGRAMS = src/ibaddr src/ibnetdiscover src/ibping src/ibportstate \
 	        src/saquery src/vendstat src/iblinkinfo \
 		src/ibqueryerrors src/ibcacheedit src/ibccquery \
 		src/ibccconfig src/dump_fts
-
-if ENABLE_RDMA_NDD
-sbin_PROGRAMS += src/rdma-ndd
-endif
 
 if ENABLE_TEST_UTILS
 sbin_PROGRAMS += src/ibsendtrap src/mcm_rereg_test
@@ -76,10 +73,6 @@ man_MANS = doc/man/ibaddr.8 \
 		man/dump_lfts.8 \
 		man/dump_mfts.8
 
-if ENABLE_RDMA_NDD
-man_MANS += doc/man/rdma-ndd.8
-endif
-
 # define this for the dist target
 compat_man_pages = man/ibdiscover.8 man/ibcheckerrors.8 man/ibcheckerrs.8 \
 		man/ibchecknet.8 man/ibchecknode.8 man/ibcheckport.8 \
@@ -98,12 +91,13 @@ endif
 noinst_LIBRARIES = libcommon.a
 
 AM_CFLAGS = -Wall $(DBGFLAGS)
-LDADD = libcommon.a
+LDADD = libcommon.a \
+	-L$(top_builddir)/libibnetdisc -libnetdisc \
+	-L$(top_builddir)/libibmad -libmad
 
 libcommon_a_SOURCES = src/ibdiag_common.c src/ibdiag_sa.c
 src_ibaddr_SOURCES = src/ibaddr.c
 src_ibnetdiscover_SOURCES = src/ibnetdiscover.c
-src_ibnetdiscover_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 src_ibping_SOURCES = src/ibping.c
 src_ibportstate_SOURCES = src/ibportstate.c
 src_ibroute_SOURCES = src/ibroute.c
@@ -121,20 +115,11 @@ src_mcm_rereg_test_SOURCES = src/mcm_rereg_test.c
 src_iblinkinfo_SOURCES = src/iblinkinfo.c
 src_ibccquery_SOURCES = src/ibccquery.c
 src_ibccconfig_SOURCES = src/ibccconfig.c
-src_iblinkinfo_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 src_ibqueryerrors_SOURCES = src/ibqueryerrors.c
-src_ibqueryerrors_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 src_ibcacheedit_SOURCES = src/ibcacheedit.c
-src_ibcacheedit_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
 
 src_dump_fts_SOURCES = src/dump_fts.c
-src_dump_fts_LDFLAGS = -L$(top_builddir)/libibnetdisc -libnetdisc
-
-if ENABLE_RDMA_NDD
-src_rdma_ndd_SOURCES = src/rdma-ndd.c
-src_rdma_ndd_CFLAGS = $(AM_CFLAGS) $(UDEV_CFLAGS)
-src_rdma_ndd_LDADD = libcommon.a $(UDEV_LIBS)
-endif
+src_dump_fts_LDFLAGS = $(internal_lib_LDFLAGS)
 
 BUILT_SOURCES = ibdiag_version
 ibdiag_version:
@@ -158,11 +143,6 @@ EXTRA_DIST = doc scripts include infiniband-diags.spec.in infiniband-diags.spec 
 distclean-local:
 	$(top_srcdir)/doc/generate clean
 
-dist-hook:
-	if [ -x $(top_srcdir)/gen_chlog.sh ] ; then \
-		$(top_srcdir)/gen_chlog.sh > $(distdir)/ChangeLog ; \
-	fi
-
 # install this to a default location.
 install-data-hook:
 	if test ! -d $(DESTDIR)/$(sysconfdir)/infiniband-diags; then \
@@ -175,12 +155,3 @@ install-data-hook:
 	$(top_srcdir)/config/install-sh -c -m 444 $(top_srcdir)/etc/error_thresholds $(DESTDIR)/$(sysconfdir)/infiniband-diags
 	$(top_srcdir)/config/install-sh -c -m 400 $(top_srcdir)/etc/ibdiag.conf $(DESTDIR)/$(sysconfdir)/infiniband-diags
 
-if ENABLE_RDMA_NDD
-install-exec-hook:
-if SYSTEMD_SYSTEM
-	$(top_srcdir)/config/install-sh -m 755 $(top_srcdir)/etc/rdma-ndd.service $(DESTDIR)/$(SYSTEMD_SYSTEM_UNIT_DIR)/rdma-ndd.service
-else
-	$(top_srcdir)/config/install-sh -m 755 -d $(DESTDIR)/$(sysconfdir)/init.d
-	$(top_srcdir)/config/install-sh -m 755 $(top_srcdir)/etc/rdma-ndd.init $(DESTDIR)/$(sysconfdir)/init.d/rdma-ndd
-endif
-endif
